# sith-language-server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-vscode-extension.yml  release.yml
crates/lsp-types/src/: completion.rs  lib.rs  notebook.rs
crates/python_ast/: Cargo.toml
crates/python_ast/src/: lib.rs  nodes.rs
crates/python_ast_utils/: Cargo.toml
crates/python_ast_utils/src/: lib.rs  nodes.rs
crates/python_parser/src/: lexer.rs  lib.rs  token.rs
crates/python_parser/src/parser/: expression.rs  mod.rs  pattern.rs  statement.rs
crates/python_parser/tests/snapshots/: invalid_syntax@class_def_empty_body.py.snap  invalid_syntax@function_def_empty_body.py.snap  (+3 more)
crates/python_utils/: Cargo.toml
crates/python_utils/src/: interpreter.rs  lib.rs  nodes.rs
crates/ruff_python_resolver/: Cargo.toml
crates/ruff_python_resolver/src/: cache.rs  implicit_imports.rs  lib.rs  python_version.rs  resolver.rs  search.rs
crates/ruff_source_file/: Cargo.toml
crates/ruff_source_file/src/: line_index.rs
crates/ruff_text_size/: Cargo.toml
crates/ruff_text_size/src/: size.rs
crates/semantic_model/: Cargo.toml  build.rs
crates/semantic_model/resources/tests/fixtures/foo/: __init__.py
crates/semantic_model/resources/tests/fixtures/foo/baz/: __init__.py
crates/semantic_model/resources/tests/fixtures/small_project/tim/: main.py
crates/semantic_model/resources/tests/fixtures/small_project/tim/api/: dependencies.py
crates/semantic_model/resources/tests/fixtures/small_project/tim/api/routes/: items.py  users.py
crates/semantic_model/resources/tests/fixtures/small_project/tim/db/: __init__.py  crud.py
crates/semantic_model/resources/tests/fixtures/small_project/tim/models/: item.py  user.py
crates/semantic_model/resources/tests/fixtures/small_project/tim/schemas/: __init__.py  item.py  user.py
crates/semantic_model/src/: builtins.rs  db.rs  declaration.rs  lib.rs  mro.rs  scope.rs  symbol.rs  symbol_table.rs  type_inference.rs  vendored.rs
crates/sith_benchmark/: Cargo.toml  README.md
crates/sith_benchmark/benches/: indexer.rs  lexer.rs  parser.rs  semantic_table_builder.rs
crates/sith_benchmark/src/: criterion.rs  lib.rs
crates/sith_lsp/: Cargo.toml
crates/sith_lsp/src/: main.rs
crates/sith_python_ast/: Cargo.toml
crates/sith_python_ast/src/: float.rs  node.rs  visitor.rs
crates/sith_python_ast/src/visitor/: source_order.rs
crates/sith_python_ast_utils/: Cargo.toml
crates/sith_python_ast_utils/src/: lib.rs  nodes.rs
crates/sith_python_parser/: Cargo.toml
crates/sith_python_parser/src/: lexer.rs  lib.rs  string.rs  token.rs
crates/sith_python_parser/tests/: fixtures.rs  generate_inline_tests.rs
crates/sith_python_utils/: Cargo.toml
crates/sith_python_utils/src/: interpreter.rs  lib.rs  nodes.rs
crates/sith_semantic_model/: Cargo.toml  build.rs
crates/sith_semantic_model/resources/tests/fixtures/: foobar.py
crates/sith_semantic_model/resources/tests/fixtures/foo/: bar.py
crates/sith_semantic_model/resources/tests/fixtures/small_project/tim/api/: security.py
crates/sith_semantic_model/resources/tests/fixtures/small_project/tim/api/routes/: login.py
crates/sith_semantic_model/resources/tests/fixtures/small_project/tim/core/: __init__.py  config.py
crates/sith_semantic_model/resources/tests/fixtures/small_project/tim/schemas/: utils.py
crates/sith_semantic_model/src/: db.rs  declaration.rs  indexer.rs  lib.rs  symbol.rs  symbol_table.rs  type_inference.rs  util.rs
crates/sith_server/: Cargo.toml
crates/sith_server/resources/test/fixtures/settings/: global_only.json  vs_code_initialization_options.json
crates/sith_server/src/: edit.rs  lib.rs  server.rs  session.rs  trace.rs  util.rs
crates/sith_server/src/edit/: fix.rs  replacement.rs
crates/sith_server/src/server/: api.rs  client.rs  schedule.rs
crates/sith_server/src/server/api/: diagnostics.rs  notifications.rs  requests.rs  traits.rs
crates/sith_server/src/server/api/notifications/: cancel.rs  did_change.rs  did_change_configuration.rs  did_change_workspace.rs  did_close.rs  did_open.rs  set_trace.rs
crates/sith_server/src/server/api/requests/: code_action.rs  code_action_resolve.rs  completion.rs  diagnostic.rs  document_highlight.rs  document_symbol.rs  execute_command.rs  format.rs  goto_definition.rs  hover.rs  prepare_rename.rs  references.rs  rename.rs  signature_help.rs
crates/sith_server/src/server/api/requests/completion/: resolve.rs
crates/sith_server/src/server/api/tests/: goto_definition.rs  lsp_client.rs  mod.rs  references.rs
crates/sith_server/src/server/api/tests/snapshots/: sith_server__server__api__tests__goto_definition__goto_class_attribute_definition.snap  sith_server__server__api__tests__goto_definition__goto_definition_across_files.snap  sith_server__server__api__tests__goto_definition__goto_definition_builtin_typeshed.snap  sith_server__server__api__tests__goto_definition__goto_definition_same_file.snap  sith_server__server__api__tests__goto_definition__goto_module_attribute_definition.snap  sith_server__server__api__tests__references__class_attribute_reference.snap  sith_server__server__api__tests__references__local_variable_reference.snap  sith_server__server__api__tests__references__module_attribute_reference.snap  sith_server__server__api__tests__references__no_references_found.snap  sith_server__server__api__tests__references__references_across_files.snap  sith_server__server__api__tests__references__references_same_file.snap
crates/sith_server/src/server/schedule/thread/: pool.rs
crates/sith_server/src/session/: capabilities.rs  settings.rs  workspace.rs
crates/sith_server/src/session/snapshots/: sith_server__session__settings__tests__global_only_resolves_correctly.snap  sith_server__session__settings__tests__vs_code_init_options_deserialize.snap
crates/sith_server/src/util/: ruff.rs
crates/sith_vendored/: Cargo.toml
crates/sith_vendored/src/: lib.rs
editors/vscode/: package-lock.json  package.json  tsconfig.json
editors/vscode/client/: package-lock.json
editors/vscode/src/: extension.ts
(+660 files in other folders)
