[package]
name = "ruff_source_file"
version = "0.0.0"
publish = false
edition = "2021"

[lib]

[dependencies]
ruff_text_size = { path = "../ruff_text_size" }

memchr = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, optional = true }


[features]
serde = ["dep:serde", "ruff_text_size/serde"]
