[package]
name = "semantic_model"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
python_ast = { workspace = true }
python_ast_utils = { workspace = true }
python_parser = { workspace = true }
python_utils = { workspace = true }
ruff_index = { workspace = true, features = ["serde"] }
ruff_text_size = { workspace = true, features = ["serde"] }
ruff_python_resolver = { workspace = true }

compact_str = { workspace = true }
ignore = { workspace = true }
bitflags = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
bimap = { workspace = true }
zip = { workspace = true }
log = { workspace = true }
directories = { workspace = true }
walkdir = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }

[build-dependencies]
path-slash = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
env_logger = "0.11.5"
