[package]
name = "sith_benchmark"
version = "0.0.0"
description = "SithLSP Micro-benchmarks"
publish = false
edition = "2021"

[lib]
bench = false
test = false
doctest = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "semantic_table_builder"
harness = false

[dependencies]
url = "2.5.0"
ureq = "2.9.6"
criterion = "0.5.1"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
sith_python_parser = { workspace = true }
sith_python_ast = { workspace = true }
sith_semantic_model = { workspace = true }
sith_python_utils = { workspace = true }
ruff_python_resolver = { workspace = true }
