[package]
name = "sith_python_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
ruff_python_resolver = { workspace = true }
sith_python_ast = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
