[package]
name = "sith_semantic_model"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
sith_python_ast = { workspace = true }
sith_python_ast_utils = { workspace = true }
sith_python_parser = { workspace = true }
sith_python_utils = { workspace = true }
sith_vendored = { workspace = true }
ruff_index = { workspace = true, features = ["serde"] }
ruff_text_size = { workspace = true, features = ["serde"] }
ruff_python_resolver = { workspace = true }

compact_str = { workspace = true }
bitflags = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
bimap = { workspace = true }
walkdir = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
