[package]
name = "sith_server"
version = { workspace = true }
publish = false
edition = "2021"

[lib]

[dependencies]
sith_python_ast = { workspace = true }
sith_python_parser = { workspace = true }
ruff_source_file = { workspace = true }
ruff_text_size = { workspace = true }
sith_semantic_model = { workspace = true }
ruff_python_resolver = { workspace = true }
sith_python_ast_utils  = { workspace = true }
sith_python_utils = { workspace = true }

compact_str = { workspace = true }
anyhow = { workspace = true }
crossbeam = { workspace = true }
jod-thread = { workspace = true }
libc = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shellexpand = { workspace = true }

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
